--- a/index.html
+++ b/index.html
@@ -77,34 +77,36 @@
             </div>
         </div>
         <div class="contact">
-            <div class="container w-75 text-center">
-                <div class="input-fields row gy-4 mt-5">
-                    <div class="col-md-5 offset-md-1">
-                        <input class="form-control" type="text" name="" id="name-input" placeholder="Enter Your Name">
-                        <div id="name-alert" class="alert alert-danger my-2">Special characters and numbers not allowed</div>
+            <div class="vh-100 d-flex justify-content-center align-items-center">
+                <div class="container w-75 text-center">
+                    <div class="input-fields row gy-4">
+                        <div class="col-md-5 offset-md-1">
+                            <input class="form-control" type="text" name="" id="name-input" placeholder="Enter Your Name">
+                            <div id="name-alert" class="alert alert-danger my-2">Special characters and numbers not allowed</div>
+                        </div>
+                        <div class="col-md-5">
+                            <input class="form-control" type="email" name="" id="email-input" placeholder="Enter Your Email">
+                            <div id="email-alert" class="alert alert-danger my-2">Email not valid *exemple@yyy.zzz</div>
+                        </div>
+                        <div class="col-md-5 offset-md-1">
+                            <input class="form-control" type="tel" name="" id="phone-input" placeholder="Enter Your Phone">
+                            <div id="phone-alert" class="alert alert-danger my-2">Enter valid Phone Number</div>
+                        </div>
+                        <div class="col-md-5">
+                            <input class="form-control" type="number" name="" id="age-input" placeholder="Enter Your Age">
+                            <div id="age-alert" class="alert alert-danger my-2">Enter valid age</div>
+                        </div>
+                        <div class="col-md-5 offset-md-1">
+                            <input class="form-control" type="password" name="" id="password-input" placeholder="Enter Your Password">
+                            <div id="password-alert" class="alert alert-danger my-2">Enter valid password *Minimum eight characters, at least one letter and one number:*</div>
+                        </div>
+                        <div class="col-md-5">
+                            <input class="form-control" type="password" name="" id="repassword-input" placeholder="Repassword">
+                            <div id="repassword-alert" class="alert alert-danger my-2">Enter valid repassword</div>
+                        </div>
                     </div>
-                    <div class="col-md-5">
-                        <input class="form-control" type="email" name="" id="email-input" placeholder="Enter Your Email">
-                        <div id="email-alert" class="alert alert-danger my-2">Email not valid *exemple@yyy.zzz</div>
-                    </div>
-                    <div class="col-md-5 offset-md-1">
-                        <input class="form-control" type="tel" name="" id="phone-input" placeholder="Enter Your Phone">
-                        <div id="phone-alert" class="alert alert-danger my-2">Enter valid Phone Number</div>
-                    </div>
-                    <div class="col-md-5">
-                        <input class="form-control" type="number" name="" id="age-input" placeholder="Enter Your Age">
-                        <div id="age-alert" class="alert alert-danger my-2">Enter valid age</div>
-                    </div>
-                    <div class="col-md-5 offset-md-1">
-                        <input class="form-control" type="password" name="" id="password-input" placeholder="Enter Your Password">
-                        <div id="password-alert" class="alert alert-danger my-2">Enter valid password *Minimum eight characters, at least one letter and one number:*</div>
-                    </div>
-                    <div class="col-md-5">
-                        <input class="form-control" type="password" name="" id="repassword-input" placeholder="Repassword">
-                        <div id="repassword-alert" class="alert alert-danger my-2">Enter valid repassword</div>
-                    </div>
+                    <button id="submit" class="btn btn-outline-danger my-3 disabled">Submit</button>
                 </div>
-                <button class="btn btn-outline-danger my-3 disabled">Submit</button>
             </div>
         </div>
     </section>
